<resources>
    <string name="app_name">module_main</string>

    <string name="menu_one">主页</string>
    <string name="menu_two">校园</string>
    <string name="menu_three"></string>
    <string name="menu_four">动态</string>
    <string name="menu_five">我的</string>
    <!--卡模块-->
    <string name="card_scan">扫一扫</string>
    <string name="card_authcode">认证码</string>
    <string name="card_paycode">付款码</string>
    <string name="card_bill">账  单</string>
    <string name="card_transfer">转  账</string>
    <string name="pay_code_refresh">条码、二维码每分钟自动刷新</string>

    <string name="exit_system">再点一次退出应用</string>
</resources>
