<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/main_tab_1_selector"
        android:title="@string/menu_one" />
    <item
        android:id="@+id/navigation_school"
        android:icon="@drawable/main_tab_2_selector"
        android:title="@string/menu_two" />
    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/main_tab_3_selector"
        android:title="@string/menu_three" />
    <item
        android:id="@+id/navigation_circle"
        android:icon="@drawable/main_tab_4_selector"
        android:title="@string/menu_four" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/main_tab_5_selector"
        android:title="@string/menu_five" />
</menu>
